<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rating</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Director">Director</string>
    <string name="Duration">Duration</string>
    <string name="Movie_Name">Movie Name</string>
    <string name="Save">Save</string>
    <string name="Starring">Starring</string>
    <string name="Write_Review">Write Review</string>
    <string name="Year">Year</string>
    <string name="Finish">Finish</string>
    <string name="DName">Director Name</string>
    <string-array name="beer_colors">
        <item>light</item>
        <item>amber</item>
        <item>brown</item>
        <item>dark</item>
    </string-array>
</resources>
