<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:weightSum="1"
    android:background="#d9e5eb">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:hint="@string/Movie_Name"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner1"
        android:entries="@array/beer_colors"
        android:spinnerMode="dropdown" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llSecond"
        android:orientation="horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText3"
            android:hint="@string/Year"
            android:layout_weight="1"
            android:inputType="number"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText4"
            android:hint="@string/Duration"
            android:layout_weight="1"
            android:inputType="number"/>
    </LinearLayout>

    <RatingBar
        android:id="@+id/RatingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText1"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/Write_Review" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Starring"
        android:id="@+id/editText5" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText6"
        android:hint="@string/Director"
        android:layout_gravity="center_horizontal"
        android:clickable="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        android:id="@+id/button1"/>
</LinearLayout>
